--- a/chrome/pageshot/options.html
+++ b/chrome/pageshot/options.html
@@ -3,10 +3,8 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title></title>
-	<script>
-		window.open('http://www.baidu.com');
-	</script>
 </head>
 <body>
+options
 </body>
 </html>
