--- a/chrome/pageshot/popup.html
+++ b/chrome/pageshot/popup.html
@@ -3,10 +3,9 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title></title>
-	<script>
-		window.open('http://www.baidu.com');
-	</script>
 </head>
 <body>
+<input type="button"  id="btn" value="click me "/>
 </body>
+<script src="popup.js"></script>
 </html>
