--- a/JavaScript/platform/index.html
+++ b/JavaScript/platform/index.html
@@ -3,10 +3,14 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <script type="text/javascript" src="js/lib/react/JSXTransformer.js"></script>
+    <link href="css/main.less" type="text/less" rel="stylesheet" >
+    <link href="js/lib/jquery-ui-1.11.4/jquery-ui.css" type="text/css" rel="stylesheet" >
+    <script type="text/javascript" src="js/lib/less/less-1.7.4.js"></script>
 </head>
 <body>
     <div class="sidebar-wrapper"></div>
+    <div class="workbench-wrapper"></div>
+    <div class="propertyBar-wrapper"></div>
 </body>
 <script type="text/javascript" data-main="js/main" src="js/require.js"></script>
 </html>
